fixed diving alignment

--- a/home.css
+++ b/home.css
@@ -219,9 +219,10 @@ div#motorcycleText {
 /*Diving*/
 
 div#diving {
+    position: absolute;
     background: url('diving.png');
     background-size: 350px 350px;
-    top: 240vh;
+    top: 410vh;
     left: 60vw;
     width: 350px;
     height: 350px;
@@ -255,7 +256,7 @@ div#diveText3 {
     background: white;
     border-radius: 50%;
     opacity: 0.5;
-    z-index: -1;
+    z-index: -1 !important;
     text-align: center;
     position: absolute !important;
 }
